HABOSH BABOSH KŐBÁNYAI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ItemsActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            />
     </application>
 
 </manifest>
